# project1

./: .gitignore  CMakeLists.txt  README.md
3DES-part2/: CMakeLists.txt
3DES-part2/include/: crypto3des.hpp
3DES-part2/src/: crypto3des.cpp  main.cpp
ML-part1/include/: correlation.h  csv_reader.h  print_table.h  standardize.h
ML-part1/py/: measure_complexity.py  measure_complexity_synth.py  plot_correlation_heatmap.py  plot_eigenvalues.py
ML-part1/results/: correlation_matrix.csv  eigenvalues.csv  factor_loadings.csv
ML-part1/src/: correlation.cpp  csv_reader.cpp  factor_loadings.cpp  main.cpp  standardize.cpp
data/: students.csv
include/: crypto3des.hpp  csv_writer.h  eigen_analysis.h  eigen_results_writer.h  factor_loadings.h
py/: plot_factor_loadings.py
results/: correlation_matrix.csv  factor_loadings.csv
src/: csv_reader.cpp  csv_writer.cpp  eigen_analysis.cpp  eigen_results_writer.cpp  launcher.cpp  main.cpp  print_table.cpp
